--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -9,6 +9,22 @@
 		"teaming": "Teaming",
 		"messages": "Messages"
 	},
+	"home": {
+		"topic": "Svelte Localization Tutorial",
+		"subtopic": "Internationalization and Localization",
+		"ifyouhaveaccount": "or if you already have an account",
+		"slogan": "Run Hyper-Automation applications with Metatocome",
+		"introduction": "Metatocome is a Hyper-Automation engine online service which can be used to automate everything in an organization that can be automated. Developers can build advanced wokflow based applications that dispatch tasks to both human and computer systems with any modern computer languages.",
+		"features": {
+			"engine": "Metatocome's core component is an advanced hyper-automation Engine running in the cloud. Developers can design, run, monitor workflow processes on this site, or develop fully customized UIs with the support of Metatocome APIs.",
+			"hyper": "Metatocome can automate the process of any sort of entities, no matter they are human or computer system, from a integrated enterprise perspective. these entities take the role of \"workers\", Staff get their work instructions from worklist, system provide API endpoints Metatocome engine will call.",
+			"easy": "Integrate workflow into your application, web-based, iOS or Android APP, with SDK of any modern computer language.",
+			"secure": "Metatocome take the role of a pure collaboration engine running separatedly from other systems, and has separated authentication, and access control from enterprise's internal IT system. Metatocome use resource URI to refer to any internal or external IT resources."
+		},
+		"search": {
+			"placeholder": "Search shared cells"
+		}
+	},
 	"account": {
 		"signin": "Sign In",
 		"signup": "Sign Up",
@@ -146,10 +162,6 @@
 		}
 	},
 	"recent": "Recent: ",
-	"home": {
-		"topic": "Svelte Localization Tutorial",
-		"subtopic": "Internationalization and Localization"
-	},
 	"status": {
 		"All": "All",
 		"ST_RUN": "Running",
@@ -401,5 +413,8 @@
 		"GROUND": "Ground",
 		"CONNECT": "Connect",
 		"THROUGH": "Through"
+	},
+	"public": {
+		"ifyouhaveaccount": "or if you already have an account"
 	}
 }
