--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -414,7 +414,26 @@
 		"CONNECT": "Connect",
 		"THROUGH": "Through"
 	},
-	"public": {
-		"ifyouhaveaccount": "or if you already have an account"
+	"setting": {
+		"set": "Set",
+		"tab": {
+			"personal": "Personal",
+			"delegation": "Delegation",
+			"tenant": "Tenant",
+			"orgset": "Org",
+			"orgchart": "Orgchart",
+			"members": "Members",
+			"smtp": "SMTP",
+			"data": "Data"
+		},
+		"personal": {
+			"avatar": "Your Avatar",
+			"signature": "Signature",
+			"cn": "Display Name",
+			"currentpassword": "Current password",
+			"newpassword": "New password",
+			"sendmail": "Send email to me on new work comming",
+			"joincode": "Join Org with joincode"
+		}
 	}
 }
