--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -220,6 +220,7 @@
 		"worklogof": "Work log of",
 		"monitor": "Monitor",
 		"print": "Print",
+		"showlog": "Show log",
 		"startat": "Start at",
 		"startby": "Start by",
 		"nodevars": "Node Variables",
