--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -3,7 +3,8 @@
 		"home": "首页",
 		"doc": "文档",
 		"template": "规划",
-		"workflow": "监控",
+		"planning": "超脑规划",
+		"workflow": "运行监控",
 		"worklist": "我的任务",
 		"settings": "设置",
 		"teaming": "组队",
