bug fix and crontab

--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -120,7 +120,8 @@
 			"deleteThisTempalte": "Delete This Template",
 			"lastUpdate": "Last Update",
 			"exportdata": "Export Data",
-			"editlog": "Edit log"
+			"editors": "Editors",
+			"scheduler": "Scheduler"
 		}
 	},
 	"title": {
