--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -120,7 +120,8 @@
 			"deleteThisTempalte": "删除这个模版",
 			"lastUpdate": "上次更新",
 			"exportdata": "导出数据",
-			"editlog": "编辑历史"
+			"editors": "编辑历史",
+			"scheduler": "执行计划"
 		}
 	},
 	"title": {
