--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -279,21 +279,21 @@
 			"kvar": {
 				"basic": "基础",
 				"extra": "附加",
-				"name": "名称",
-				"tbl_options": "栏位名称",
+				"name": "参数名称",
+				"tbl_options": "栏位定义",
 				"ou_options": "组织选项",
-				"sel_options": "选项",
-				"tbl_placeholder": "栏位名1;栏位名2;栏位名3",
+				"sel_options": "选项定义",
+				"tbl_placeholder": "栏位间用竖线分割，如：栏位名1|栏位名2|栏位名3",
 				"ou_placeholder": "ou_code;yes/no(是否包含当前级)",
-				"sel_placeholder": "可选项1;可选项2;可选项3",
-				"value": "初始",
-				"label": "标识",
-				"when": "条件",
-				"placeholder": "提示",
-				"visi": "可见",
-				"breakrow": "换行",
-				"ID": "编号",
-				"required": "必须"
+				"sel_placeholder": "选项间用；分割，如：可选项1;可选项2;可选项3",
+				"value": "缺省值为",
+				"label": "显示名称",
+				"when": "条件显示",
+				"placeholder": "提示信息",
+				"visi": "对谁可见",
+				"breakrow": "是否换行",
+				"ID": "编号(可选）",
+				"required": "是否必填"
 			},
 			"button": {
 				"addnewvar": "+ 增加新变量",
