--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -453,7 +453,8 @@
 			"currentpassword": "当前密码",
 			"newpassword": "新密码",
 			"sendmail": "有新任务时发送邮件给我",
-			"joincode": "使用joincode加入一个组织"
+			"joincode": "使用joincode加入一个组织",
+			"passwordhint": "密码格式要求： 1. 总长度6-20之间； 2. 大小写字母、数字、特殊字符三类，每一类均至少包含一个；3. 特殊字符仅限!@#$%^&*"
 		},
 		"delegation": {
 			"delegation": "委托",
