add: no free reg alert

--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -32,6 +32,7 @@
 		"signout": "Sign Out",
 		"logout": "Log out",
 		"register": "Register",
+		"nofreereg": "self-registration is not allowed, contact your admin",
 		"needAnAccount": "Need an account?",
 		"yourEmail": "Your email",
 		"password": "Password",
