--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -32,6 +32,7 @@
 		"signout": "登出",
 		"logout": "登出",
 		"register": "注册",
+		"nofreereg": "不允许自主注册, 如您是该企业员工，请联系管理员",
 		"needAnAccount": "需要一个新账户?",
 		"yourEmail": "你的邮箱",
 		"password": "你的密码",
