--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -462,7 +462,8 @@
 			"orgchart": "Orgchart",
 			"members": "Members",
 			"smtp": "SMTP",
-			"data": "Data"
+			"data": "Data",
+			"maintainance": "Maintainance"
 		},
 		"personal": {
 			"avatar": "Your Avatar",
