--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -101,7 +101,8 @@
 				"settags": "添加标签，多个标签之间用空格分割",
 				"setauthor": "将作者指定为（输入用户邮箱前缀）",
 				"setdesc": "设置说明描述信息",
-				"setvisito": "对谁可见 (使用PDS格式指定): "
+				"setvisito": "对谁可见 (使用PDS格式指定)",
+				"tplid": "修改模版名称ID"
 			}
 		},
 		"me": "我",
