Redesign workflow comments

--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -626,6 +626,7 @@
 	},
 	"comment": {
 		"hide": "Hide Discussion",
-		"show": "Show Discussion"
+		"show": "Show Discussion",
+		"fortodo": "comment: "
 	}
 }
