add: kickout notify

--- a/src/lib/lang/en.json
+++ b/src/lib/lang/en.json
@@ -643,5 +643,8 @@
 		"show": "Show Discussion",
 		"fortodo": "Comment to: ",
 		"forcomment": "Reply to："
+	},
+	"session": {
+		"kickout": "abnormal refreshs detected-session terminated"
 	}
 }
