--- a/src/lib/lang/zh-CN.json
+++ b/src/lib/lang/zh-CN.json
@@ -650,6 +650,7 @@
 		"forcomment": "回复："
 	},
 	"session": {
-		"kickout": "过多非正常操作刷新-你的登录被退出"
+		"kickout": "过多非正常操作刷新-你的登录被退出",
+		"forcetohome": "过多非正常操作刷新-退回首页"
 	}
 }
